@@ -37,12 +37,13 @@ To build and use git-annex, you will need:
   * [TestPack](http://hackage.haskell.org/cgi-bin/hackage-scripts/package/testpack)
   * [QuickCheck 2](http://hackage.haskell.org/package/QuickCheck)
   * [HTTP](http://hackage.haskell.org/package/HTTP)
-  * [hS3](http://hackage.haskell.org/package/hS3) (optional)
   * [json](http://hackage.haskell.org/package/json)
   * [IfElse](http://hackage.haskell.org/package/IfElse)
   * [bloomfilter](http://hackage.haskell.org/package/bloomfilter)
   * [edit-distance](http://hackage.haskell.org/package/edit-distance)
+  * [hS3](http://hackage.haskell.org/package/hS3) (optional)
   * [stm](http://hackage.haskell.org/package/stm)
+    (optional; version 2.3 or newer)
   * [hinotify](http://hackage.haskell.org/package/hinotify)
     (optional; Linux only)
 * Shell commands
