@@ -1,5 +1,5 @@
 Name: git-annex
-Version: 3.20120624
+Version: 3.20120625
 Cabal-Version: >= 1.8
 License: GPL
 Maintainer: Joey Hess <joey@kitenet.net>
@@ -31,13 +31,16 @@ Flag S3
 Flag Inotify
   Description: Enable inotify support
 
+Flag Assistant
+  Description: Enable git-annex assistant and watch command
+
 Executable git-annex
   Main-Is: git-annex.hs
   Build-Depends: MissingH, hslogger, directory, filepath,
    unix, containers, utf8-string, network, mtl, bytestring, old-locale, time,
    pcre-light, extensible-exceptions, dataenc, SHA, process, json, HTTP,
    base == 4.5.*, monad-control, transformers-base, lifted-base,
-   IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance, stm
+   IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance
   -- Need to list this because it's generated from a .hsc file.
   Other-Modules: Utility.Touch
   C-Sources: Utility/libdiskfree.c
@@ -46,6 +49,10 @@ Executable git-annex
   if flag(S3)
     Build-Depends: hS3
     CPP-Options: -DWITH_S3
+
+  if flag(Assistant)
+    Build-Depends: stm >= 2.3
+    CPP-Options: -DWITH_ASSISTANT
 
   if os(linux) && flag(Inotify)
     Build-Depends: hinotify
@@ -58,7 +65,7 @@ Test-Suite test
    unix, containers, utf8-string, network, mtl, bytestring, old-locale, time,
    pcre-light, extensible-exceptions, dataenc, SHA, process, json, HTTP,
    base == 4.5.*, monad-control, transformers-base, lifted-base,
-   IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance, stm
+   IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance
   Other-Modules: Utility.Touch
   C-Sources: Utility/libdiskfree.c
   Extensions: CPP
